Fix z-index

--- a/to-become-packages/headergame/client/headergame.styl
+++ b/to-become-packages/headergame/client/headergame.styl
@@ -2,5 +2,5 @@
   width 100%
   height 100%
   position absolute
-  z-index 9
+  z-index 4
   top 0
